services/tunnel2-deployment/tunnel2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tunnel2-service
spec:
  type: ClusterIP
  selector:
    app: tunnel2-app
  ports:
    - name: tunnel2-clusterip-port
      protocol: TCP
      port: 1080
      targetPort: tunnel2-port
