services/tunnel2-deployment/tunnel2-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tunnel2-network-policy
spec:
  podSelector:
    matchLabels:
      app:
        tunnel2-app
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            except:
              # make sure to block link-local addresses,
              # since there's sensitive data in http://metadata
              - 169.254.0.0/16
              # don't allow anything kubernetes
              - 10.0.0.0./24

  # Allow access from any of the code-executing apps
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                # FSTODO: others
                values: [apiserver-app]
