services/tunnel2-deployment/tunnel2-networkpolicy.yaml
# NetworkPolicy for tunnel2. It allows traffic from pods that do Dark code execution,
# and forbids local access to any k8s stuff

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tunnel2-network-policy
  namespace: darklang
spec:
  podSelector:
    matchLabels:
      app:
        tunnel2-app
  # Things are deny-all by default in the darklang namespace
  policyTypes:
    - Ingress
    - Egress

  # Allow access from any of the code-executing apps but nowhere else
  ingress:
    - from:
        - namespaceSelector: { }
        - podSelector:
            matchLabels:
              dark-executor: "true"

  egress:
    # tunnel2 uses google for DNS because kube-dns could expose info about the cluster
    - to:
        - ipBlock:
            cidr: 8.8.8.8/32
        - ipBlock:
            cidr: 8.8.4.4/32
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53

    # Custom domains route to darkcustomdomain-nginx-ingress-controller, which is in
    # the same namespace and so is by-default firewalled off, so we need a path to
    # it. We don't need to do this for other ingresses as they are not in the cluster
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: darkcustomdomain-nginx-ingress-controller
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80

    # Allow egress to non-internal addresses, with all the known internal addresses
    # specifically excepted
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            except:
              # Exclude any local addresses
              - 169.254.0.0/16
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 127.0.0.0/8
              # Specifically exclude Dark's DB server
              - 35.203.144.131/32
